# EjerciciosColaborativos2

./: CMakeLists.txt  main.cpp
include/: Exercise1_StudentManagement.h  Exercise2_BackpackGame.h  Exercise3_AdvancedCalculator.h  Exercise4_UserSystem.h  StaticList.h
src/: Exercise1_StudentManagement.cpp  Exercise2_BackpackGame.cpp  Exercise3_AdvancedCalculator.cpp  Exercise4_UserSystem.cpp
